--- a/GetWellPJ.html
+++ b/GetWellPJ.html
@@ -25,9 +25,9 @@
             </div>
             <div class="collapse navbar-collapse" id="topBar">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="btn btn-info" href="#">Aqua</li>
-                    <li class="btn btn-info" href="#">Save Aqua</li>
-                    <li class="btn btn-info" href="#">Don't Save Aqua</li>
+                    <li class="btn" href="#">Aqua</li>
+                    <li class="btn" href="#">Save Aqua</li>
+                    <li class="btn" href="#">Don't Save Aqua</li>
                 </ul>
             </div>
         </div>
@@ -35,9 +35,25 @@
     <main>
         <div class="jumbotron">
             <div class="container">
-                <h1 class="title">This is your Get Well page</h1>
+                <h1 class="animated hinge title">This is your Get Well page</h1>
             </div>
 
+        </div>
+        <div class="container firstDiv">
+            <p class="firstParagraph col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                This is water. Drink it. Your body is made up 70% water.
+            </p>
+            <div class="image">
+                <img src="images/erda-estremera-578984-unsplash.jpg" class="img-thumbnail img-reponsive" id="photo1">
+            </div>
+        </div>
+        <div class=" container firstDiv">
+            <p class="firstParagraph col-lg-4 col-md-4 col-sm-6 col-xs-12">
+               This is air. Be like her. Breath it.
+            </p>
+            <div class="image">
+                <img src="images/thien-dang-308065-unsplash.jpg" class="img-thumbnail img-reponsive" id="photo1">
+            </div>
         </div>
     </main>
 
