Updated a new image and <p>

--- a/GetWellPJ.html
+++ b/GetWellPJ.html
@@ -55,6 +55,14 @@
                 <img src="images/thien-dang-308065-unsplash.jpg" class="img-thumbnail img-reponsive" id="photo1">
             </div>
         </div>
+        <div class=" container firstDiv">
+            <p class="firstParagraph col-lg-4 col-md-4 col-sm-6 col-xs-12">
+               This is milk. Caleb suggested you drink it. Drink it.
+            </p>
+            <div class="image">
+                <img src="images/noemi-jimenez-499354-unsplash.jpg" class="img-thumbnail img-reponsive" id="photo1">
+            </div>
+        </div>
     </main>
 
     <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
